# forge

./: README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  format_reference.md  index.html
forge/: cli.py
forge/core/: models.py
forge/formats/: __init__.py  registry.py
forge/formats/mcap/: README.md  __init__.py  attachments.py  decoders.py  episode_split.py  extractors.py  inspect.py  reader.py  sync.py  topic_config.py  video_decode.py  writer.py
forge/formats/mcap/schemas/: CompressedImage.msg  Image.msg  JointState.msg  PoseStamped.msg  TFMessage.msg
forge/segment/: __init__.py  analyzer.py  config.py  labeler.py  models.py  plot.py
forge/visualize/: rerun_backend.py
scripts/: download_mcap_fixtures.py  generate_registry_page.py  mcap_inventory.py
tests/: conftest.py  test_mcap_attachments.py  test_mcap_corpus.py  test_mcap_episode_split.py  test_mcap_inspect.py  test_mcap_reader.py  test_mcap_roundtrip.py  test_mcap_sync.py  test_mcap_topic_config.py
tests/fixtures/mcap/: INVENTORY.md
